--- a/credits.html
+++ b/credits.html
@@ -65,9 +65,9 @@
 
   <!-- Cards Container -->
   <div class="cards-container">
-    <!-- Special Thanks -->
-    <div class="role-card" id="special-thanks">
-      <h2>Special Thanks</h2>
+    <!-- Contributor Role -->
+    <div class="role-card" id="contributor">
+      <h2>Contributor</h2>
       <p>Slipstream</p>
     </div>
 
